# Font-Atlas-Generator

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
data/: .gitignore  config.lua
data/doc/: fontatlas.lua
freetype/: CMakeLists.txt
freetype/install/lib/: freetype.lib
freetype/install/lib/cmake/freetype/: freetype-config-release.cmake  freetype-config-version.cmake  freetype-config.cmake
imgui/: CMakeLists.txt  PixelShader.h  PixelShader.hlsl  VertexShader.h  VertexShader.hlsl  WICTextureLoader9.cpp  WICTextureLoader9.h  main.cpp
lua/: CMakeLists.txt
lua/cmake/: CMakeLists.txt
lua/install/lib/: lua54.lib
main/: CMakeLists.txt  binding.hpp  builder.cpp  builder.hpp  common.cpp  common.hpp  fontatlas.manifest  istream.hpp.bak  logger.cpp  logger.hpp  main.cpp  texture.cpp  texture.hpp
